test/scc/pp/errors/026.a
026.t:1:6: error: expected an expression